style.css
* {
    padding: 0;
    margin: 0;
    font-family: "Roboto", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings:
        "wdth" 100;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    font-size: 18px;
    color: #E5E7EB;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    font-weight: 0;
    opacity: 0.8;
}

a {
    text-decoration: 0;
    color: #E5E7EB;
    font-size: 18px;
}

header {
    display: flex;
    flex-direction: column;
    background-color: #1F2937;
}

.header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0px 10px;
    padding: 10px 140px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
}

.hero-container{
    display: flex;
    margin: 50px 10px;
    padding: 10px 140px;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    gap: 20px;
}

.heading-of-hero{
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
}

.content-of-hero{
    font-size: 18px;
    color: #E5E7EB;
}

.left-card{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 5px;
    flex-wrap: wrap;
}

.button-of-hero{
    background-color: #3882F6;
    border-radius: 8px;
    padding: 10px 20px;
    border: 0px;
    margin-top: 8px;
}

